crates/service/tests/code_action/snapshots/features__code_action__inline_export__func.snap
---
source: crates/service/tests/code_action/inline_export.rs
expression: response
---
[
  {
    "title": "Inline export",
    "kind": "refactor.inline",
    "edit": {
      "changes": {
        "untitled:test": [
          {
            "range": {
              "start": {
                "line": 2,
                "character": 2
              },
              "end": {
                "line": 2,
                "character": 22
              }
            },
            "newText": ""
          },
          {
            "range": {
              "start": {
                "line": 3,
                "character": 10
              },
              "end": {
                "line": 3,
                "character": 10
              }
            },
            "newText": " (export \"\")"
          }
        ]
      }
    }
  }
]
